--- a/font.css
+++ b/font.css
@@ -40,12 +40,13 @@ th {
 td {
   border: 2px solid salmon;
   padding: 10px;
+  /* empty-cells: hide; */
 }
 table {
   border: 3px solid black;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   border-spacing: 10px 10px;
-  empty-cells: show;
+  empty-cells: hide;
   table-layout: fixed;
   width: 100%;
   text-align: right;
@@ -58,6 +59,7 @@ tr:nth-child(3) {
   background-color: brown;
   overflow: hidden;
   text-overflow: ellipsis;
+  empty-cells: hide;
 }
 
 /* text */
