--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
-h1{
-color: blueviolet;
+h1 {
+  color: blueviolet;
 }
-  p{  
+p {
   background-color: yellow;
   font-size: 50px;
   font-size: 2rem;
-}  
-.my{
-  background-color: rgb(255,0,255)
 }
-#Un{
+.my {
+  background-color: rgb(255, 0, 255);
+}
+#Un {
   color: coral;
 }
-#pn{
+#pn {
   color: cadetblue;
-  background-color: rgb(0, 234,56);
+  background-color: rgb(0, 234, 56);
 }
 b {
   color: darkgoldenrod;
@@ -22,29 +22,29 @@ b {
 i {
   background-color: rgba(237, 0, 21, 0.1);
 }
-q{
+q {
   color: darkred;
 }
-ins{
+ins {
   background-color: gold;
 }
-del{
+del {
   color: red;
 }
-#mu{
+#mu {
   color: lawngreen;
 }
-#he{
+#he {
   color: saddlebrown;
   background-color: black;
 }
-.blo{
+.blo {
   display: block;
   background-color: coral;
   /* height: 100%;
   margin: 2px; */
 }
-#in{
+#in {
   background-image: url(images/house.png);
 }
 
@@ -63,25 +63,25 @@ a {
   height: 100%;
   width: 100px;
   background-color: darkgoldenrod;
-} 
+}
 /* h1{
   display: none;
   visibility: hidden;
 } */
- h2{
+h2 {
   background-color: chartreuse;
   /* visibility: hidden; */
   color: blue;
- }
- .outer{
+}
+.outer {
   display: flex;
   background-color: brown;
   gap: 20px;
   /* flex-direction: column-reverse; */
   flex-direction: row-reverse;
-  flex-wrap: wrap ;
- }
-.inner{
+  flex-wrap: wrap;
+}
+.inner {
   display: inline-block;
   display: flex;
   background-color: forestgreen;
@@ -89,38 +89,57 @@ a {
   gap: 30px;
   flex-flow: row-reverse;
   flex-wrap: wrap;
- }
- .jus{
+}
+.jus {
   color: blue;
   background-color: lightcoral;
   display: flex;
   justify-content: space-around;
-  align-items:baseline;
-  
- }
- .gri{
+  align-items: baseline;
+}
+.gri {
   background-image: url(images/house1.png);
- }
- .outter{
+}
+.outter {
   /* background-color: rgb(111, 56, 56); */
   /* background-image: url(images/house.png); */
   display: grid;
   grid-template-columns: 100px 250px;
-  grid-template-rows:  100px 200px;
+  grid-template-rows: 100px 200px;
   grid-gap: 10px 0;
- }
- .inner1{
+}
+.inner1 {
   grid-column: 1/6;
   /* grid-row: 1/2 */
   /* grid-column: span 2; */
- }
- .outterr{
+}
+.outterr {
   /* background-image: url(images/house.png); */
   background-color: blue;
   display: grid;
   /* grid-template-columns: repeat(2,ifr) ; */
-  grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-gap: 10px 2px;
   display: flex;
   display: inline-flex;
- }
+}
+
+
+.search-icon {
+  position: absolute;
+  border: 1px solid #ccc;
+  margin-left: 15px;
+  padding: 8px 12px;
+  border-radius: 25px;
+  
+}
+.search-icon input{
+  width: 200px;
+  border: 0;
+  outline: 0;
+  
+}
+.search-icon i {
+   width: 15px;
+}
+
